--- a/ansible/inventory/host_vars/master1.sops.yaml
+++ b/ansible/inventory/host_vars/master1.sops.yaml
@@ -1,4 +1,4 @@
-ansible_become_pass: ENC[AES256_GCM,data:9jGGy/rmQSI=,iv:kUQwv4IdGyRNzxj54qkikxItmfE0FncRB5zs3TZoUIg=,tag:qLp5wqkuTBI9Ni7cWoMtnw==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:VHe9shFJ2UI=,iv:12WKN6jiYZTDqbTdAVn1Sf3jCV3RLovBELdeGzu1KfI=,tag:kGaEvPlekbfOFBE1H0rGYA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -8,14 +8,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsbGtHMFFZTTFSNUFPZjZ4
-            K1VuYXd1cSs5and1WVNZV0VXUFRlRTIza1djCkxNai9RTnZvbDdPNkFUVk90eTk0
-            UVlJMGNYRWp3SjZIRVEzWUlMdHZhNjQKLS0tIGhqVTgzUFBUc1dVbVJpcXFSMEYx
-            RjJOQzA5OVhxWnpuQWp1NXNRZWUxdTgKrL/hZhxpxHuNWN4rhLDPYaBuMihk4xWi
-            I6wtcWwJxlc0yw67DxNt56sA+gdTXTMSwqrIdqno0Ix1Z+0oR2IoFQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxZk10bDdFUTFaSlhhZTJr
+            TFNpRVZwaC94QXZqVkRwRThlMUk3TVZCUzNFCitkYmtQclZpSmdEYzErQm9iVmFh
+            WmViM0JSNmNja2hHSnhUL0swM282aHMKLS0tIDRJRHpiOGFsQ3JHaUdBOE1MQk56
+            Zi9GanBmUXVYeE9yYW9UbWYzOGZvYXMKU7di0qv46/hFqt6E4MyOps085iaNNNzx
+            ugpw03TvOpydmVOydS1KBBnmQevT9avL9SoKbgXa5pwXmpckog0YOg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T02:09:31Z"
-    mac: ENC[AES256_GCM,data:3ZrZPVzlNokxCbMjabCVAWcsPCm20EyiFsuwVnom6duOKVAczbzA6rO6UHjY8DdttJD/c+4MBrndD1hzjRe4RtioxtDvS1+bm6pXYEmsb0GHvo++Vy/LernoSbcnFhvDertY114ri3SFI+Zql7xbptnGShH9O/0/QEra71a826s=,iv:XfmXQHVW2tiiZpA5gLAPydF8kVrhMRl+dN9s6apwVvI=,tag:dtDO6/e6lgi7XHyXYbwFtA==,type:str]
+    lastmodified: "2023-10-09T02:30:49Z"
+    mac: ENC[AES256_GCM,data:StRQImhg0GmPNUQb1eHi6bIOhCwsrE/hee3LYKzayN61pz1KoTNQu1LvuxqfAb+muaOAoxYXHdjEMjKE3e2Rbvpv2A0QZYz5lythJbNHS1q6CUCDZPOr4LEEOxIeEByTnmy2fiQVu48VasJP/L8gpo7rEsUpv1LxN/5ixCmYDf8=,iv:dxW4RJMfIEF998V7GXzpMwCwIlICKPzOz229tSgbAr4=,tag:abYouyEZ26C3rekT0dOu9A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.0
