--- a/ansible/inventory/host_vars/master2.sops.yaml
+++ b/ansible/inventory/host_vars/master2.sops.yaml
@@ -1,4 +1,4 @@
-ansible_become_pass: ENC[AES256_GCM,data:CQcH/VzMl5w=,iv:+Y0DpsPQHXDmubh/Lx7gEZBI9K1HdN37xk/4IbYIllw=,tag:V6JjzOvr7Y5EwZhDkADA1Q==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:wYZucGwq6+4=,iv:5ke27encP4ORF1gZwzvdkjqphiwjq6rzw+AmInilTkU=,tag:KKdTVh1Y7mP73jTrAeE5eA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -8,14 +8,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2S1FVWFN5K250TytYZFBz
-            c2o2cENGeFNaNTZPcWpPMUYwVDF2ODY1RkJzCmtCZEpqSVo2YXdMakIvUTUwekdT
-            Q29pZXdWTENJZTR2VGVsOEptc1pNd0EKLS0tIFdsU2dNN2ZyWXV2QkZiM0ZSb3Ur
-            S0luM2VEaktFRGZ4bithVW8zeGQ1aEkKPZnFw1aFc+7NAf+bMpFk9ggSUXumY0D+
-            To8FISqwCo1Tbp+g++XQn2NmXgeNubBuO2Ii6f2epIYxVPLdQEKKkw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1VzdKYWNIL0k1NWl2dDlT
+            MXpheUtpNVpJWjcyZ1ZkSkxwOEVJTStPZ25BCkNUazRpKy9BK0lyWUdzMi96c0Fv
+            NnRYWHlNKzQ3MmhLTDRhdWdtUEgzRlkKLS0tIGxkUnZBMFZ1VWpYVG5SNVQzcjVE
+            WXFZS0xTSjE2aVZvRmpxMUQ1aVQ3OFUKduMrPQljR9ftWIx6mvgouXikTomC9P9R
+            WSJ0nDF9p5rkD9q3udkzB1I0VEQGfsG3pwrp3LGDaeDuvB3zxzL3XA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T02:09:31Z"
-    mac: ENC[AES256_GCM,data:gXtdY7As73s1A3wUlwy+YcWJnU7iOawy5TKHODQ66DplKx0wg8+lBsXbJ9ecGoFNfFuBFHpxgfC8b73NJtF617vPjL1J3nJuKtvs+n6qij1UkzzwiE3ejN4lMy9bKqSy61CbBgh7Ah7lpEjqYOXF+DYE6R50Vdonvad74+lGh2k=,iv:nlZ13/yLSmZ7veFmaHBRq753uq+g8+mHGy9cNxdcpf8=,tag:KgrUfJKU8RSmxaUe+XbcBw==,type:str]
+    lastmodified: "2023-10-09T02:30:49Z"
+    mac: ENC[AES256_GCM,data:14TAaDpJyEFGUZX7NDa4Kiqo5NUaG38CC5moO8wtzihx3qCmy8SVuX+awdjo6eThvqaow8SD3Wwfk7E4og6omjRuHFgW0W8C/hLoo/SwHzXegIowLNzl27C4igQHTYGWEQ5v+CTdHCfGaPohCZYFaE8WgudlJtll+2FdJ48jWZI=,iv:MLJzNZRbQukDO+h5jQOPyYhVO6W8gF7D6Aa2LJ0qPkQ=,tag:fVEqzb/v2uyALfSlVA4UzQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.0
