--- a/ansible/inventory/host_vars/master3.sops.yaml
+++ b/ansible/inventory/host_vars/master3.sops.yaml
@@ -1,4 +1,4 @@
-ansible_become_pass: ENC[AES256_GCM,data:PcmeEStJ9ew=,iv:2oJ7aNBxbI2A9V4bLtLUeMeN1EaKxUDYeTYrbr/d09U=,tag:SopkoRaRpimlVeBY9mohRA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:Jm8G0rukpTQ=,iv:FSbx9LpbQ0b21CPF6LrmuXfwpef1NsNukTed0BiZ5JM=,tag:6o6NpAZbLCyNSwbHfIuTfA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -8,14 +8,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAwUitQYXRMZUxnSXRIbTdN
-            ZUV6WWJvbE5nM0JXTzdVcFhRMW1zNDlwRG1zCk5NY0ZQOXFoNFpHamorMG9BaStI
-            Nnpqc3VHWVVDeS83MTJlYlN4MWI2MEUKLS0tIGNkaGhDc3lKN3dHd3BXblY2anY3
-            RXdOVTZBU21tank0c0tMd3Z1bWFZb0EKIJ/v0BTx5+6Cwd/PJGbbCUx3G7Jb5UvX
-            xT584/hM0vN2pIsAe2A6hgdCCNwMMLy9aZawa+bimsXHATEFKTIlIQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwdFFVVHVyQUl0Yjg4ODFw
+            S0ZDM2NMQ2F4ZGpzbWw5bHdhZUNnVFRreWxBCmIwc2cvSVJRYlg5bDNsY3ZqUm9h
+            NVVXcndIVE1uOGgrNytyRGF3eUIwcW8KLS0tIFBMdlFkdzVjRGVycWRGRVJCQUp1
+            Ni9pdFFUUE5uQStlbENjZmxQZXdjTkUKjtsqACjzNn3Zjk5FzAqZWX0dNauSJj/s
+            /65cjZxXCu6oaT1bGtvsNPwEvk4tz/KbhpR4ER4otGDui3caFqOZkw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T02:09:32Z"
-    mac: ENC[AES256_GCM,data:u/Coz7SRsObrB1rKlI8lwVvoCvrZBIIZ8z9zTgwUclxav7R1pVXYIEdSH4dYbbvB1ei6cXXusexR1QtQdL7XBVCCv8y5YcgW9+q4ljJ7r1bU9cj6IaMLPeIcUhqNonc1zs8YS9EIOKMyKvRplXfDJwre9V5zdxbuMNHFW+lLxUQ=,iv:q1l/02AVQXze0ZILBdaSYhT7FMEvZpVScFcBt6DAd+A=,tag:bCknY0bhnqNCWYFNH9q3/g==,type:str]
+    lastmodified: "2023-10-09T02:30:50Z"
+    mac: ENC[AES256_GCM,data:DmCM5e2Q08mnIntQWXQH2GrWlklGLGw7rSOS2KFqv2Leu3Yk7EP2BWHaJ5H0XBqSD7GQmxi8dOZNEmbtRvukmf0h12MkibM3MrjPwdWUh79nIQmg9wkRcp/ZVlbniOg7PimIaEC0xMtCJhQyMwC+uS45pMaSQKB5SMcOzDF9QaA=,iv:MhrsVvf4q7QbG2cEA9z0JTio9PEZqsRDxomjCXSkdf8=,tag:qgWG8/gj5ya+W40w67TgTg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.0
