--- a/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-user-auth
     namespace: flux-system
 stringData:
-    password: ENC[AES256_GCM,data:2BSW/3T3HDYg0JVzqx9VZhT+BksBTbJX8v82CTDtNK7FFAyxSD16ddc9RZwpMZ0sN7phU0KjpSl2Gm86,iv:14FjTTOjPvwtmB4TY83i8KkGBnDePYqdvH5lJbcWNRU=,tag:GhnTu9Jxxrwb0cl7E4kf5g==,type:str]
-    username: ENC[AES256_GCM,data:uVVBXRU=,iv:sxaivYypZS5m3FwOBBYGnoBt8q1ELhPNVSODw97S5PY=,tag:6LvJDK79JnhduVqPoJDnnQ==,type:str]
+    password: ENC[AES256_GCM,data:ldAqJWqVBEPLtCZPIUZNx0xkCrr4aLaSZRTfrWC/tmP1GZ5R5DTYqHrYwaSE1TmHH6q2DzTNTTlEA5qH,iv:c36NTkEVHiGRKd7rw0YbJul/040zpVN4Cr3qcaG51XE=,tag:TrIO2bUxE6vSts0zM17bwg==,type:str]
+    username: ENC[AES256_GCM,data:/zlTCCc=,iv:3q3e4VDuO/pOZ7yOLNQTQFfZWRJlz1EDFPV2arB+j+M=,tag:t18lzco7/Py+FMR/TrF0Lw==,type:str]
 type: Opaque
 sops:
     kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrMHBZSzR5R09EbEJnaVdp
-            YUs1U2VKYnZKQ2FESGpFUjQvTWZJMU5JcEVnCjlYQU5zSGZTd0tPc0lhMlBRWHNU
-            eWlBY1lTdzZwbE4xN3dIUDErRjNMNFEKLS0tIHpEbmdBRFU2U2tqU3FHblNSNC9P
-            bE1rUUl2ZHlMdmNRd2VSYmdtQURSZVkKqxdeRUaqArpKq58+KpWhK44aQ0j7ej54
-            M+FohKsMW1aQlIpdU0q8mMrAx14K0C1l/VTIJ79+iUNAKhoriMpelw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiRFQyUEhMMHZEeW1rb2Er
+            bDA2c1diSmRib2l0OWRSdVU2SFAybFFBQmo0Cnp1RSt1TjNnRnRISmxXZDF1dEEy
+            U0xZWEsyVkN4RHZYM0ZYeWVTVnoyREkKLS0tIHRTODByQU1qc3JUZVNVSUpIcWtm
+            REw2NlhaaTlPeHlwenY1L2EvUnZ5UjAKcSe9sQT3ei+r9XJUA0lDmoYwQoDHknxY
+            62ysVyfQDX2+oaDy756PEoaMGgnWj8gpXBpMTkhIAiOa+4HjXSthig==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T02:11:12Z"
-    mac: ENC[AES256_GCM,data:lk541G3AlIOozlYrTSI4FO4oGq9kBO1p0RgrpxsDgXXFOtHUAAIo+LsJUGtguTK5B0qnXT3yeRfx76AW18cNYuRcBqm+2yyBkioei7E5b4ICY2JxBITLfz+wkl3T7VayLYgIkccSZ74rjseKM7sBZNyCnLlUBZDlqCUF3q5rre0=,iv:F0Bfwz9pr93sWW6qK77uhNb94hFV9QcAFA4qJZE3PmI=,tag:JaAi7sQrHN0kj2N4L4Gvnw==,type:str]
+    lastmodified: "2023-10-09T02:32:31Z"
+    mac: ENC[AES256_GCM,data:HgYYfLTljWQ0xTKX16F4/A/rVk2BxbaG+0ntBP14pfwihawp+WTk+P9PpHq3OtH/AT24f6avbsZkroxFMQl8N5dFwQDvBd8RzNzKmTq6MX2EWZ2K3hfWGN0p1q8puZ78K71HHAwQZPhiFTKstS+INZ8thPzsBPLFDPiYXtZ6NgA=,iv:JZuLHUMCGaY/JGf6cb99Acqbzi5euFXV7Szzo0OCUns=,tag:jSZdYH8h9hWkmyhQnxusWA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
