--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -4,7 +4,7 @@ metadata:
     name: cluster-secrets-user
     namespace: flux-system
 stringData:
-    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:6rPgAc16GByf54O9,iv:BRhHYBbZUITzy8C9ku6Tw0DEMu8ggs3ZNHY9orGU8AY=,tag:CDkEIShxM/eE2+cn2mwz4w==,type:str]
+    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:nsNEmWWAPQAzGF4B,iv:ZJlEY8w9Kx6wLrNMDSLoBNZ7pDeDvk5UWP+ocPgMjeg=,tag:rJ3C/00UvDdL55Uv+z2qVg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -14,14 +14,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWNmM5WTZnSjlyUyt2L0R5
-            eVhwT3g0eUV4R0pkUDNSS2ZIRWFqZDBLWVhNCkRMS0g1Y0hXM3o0YzhZeTJGV0ZR
-            N01sOVUwbm52ZWxBMXZjSHBzL291MXMKLS0tIFJVa1g0WUt0MXNLY1FwUzR2ZWlI
-            Qk1RZmNTLy9NbmFNbUNDWWI1Z3IvZ0UKm1bmNamX153KT9GvH6AJqTucDGlpC3sQ
-            Tt7aGJCiERc3/CBpqKSB77BX4+IVBZL0bI1AP8qhWUubkl1hFEAtmg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGRmpvUjNybU9QTUhkb1dR
+            Zi83N0FYQWFqN3JKZGtweUdDcEdhNkV2ZkMwClg3bzQ4TXNHOEFqUStwUVZqd2ZS
+            VDR2WEsvZTlRUWYydHcrYzN0bUhDNkUKLS0tIHRDVkxGczdxU3BtSE9FSWJFZVlC
+            YmhMUXdNbnNqVDJEeDErY3p0WDAvV00KnenyK7qTceaqfjAPe7Ey0e+4RXoONstG
+            fsDZc+etOoqCAqeIZ9sDdiGft8OPSfflDrBt4Qc9lj2sC3ycpb8szQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T02:10:52Z"
-    mac: ENC[AES256_GCM,data:IviNBcxaKlEFEwQTCN/RyDcblkZIiAEZJYZEL+dFpOZSGK9+tSzgr9OllzyPxW1bgknFxXcR62lMlCBLbEexExUjJFVUxNHnqay4e+Ygqxb9GXdJ9C7ME1SneCopyL/Jafn9M1aK1tInMk2VBVZ2CuHemr+9rTe1DPpbmBegpWk=,iv:5UG8/PcKWEGU4DfkTRebAb5LZ56LHcikUxwXDBGEXQw=,tag:zS7zeqkOK2r7QGprR34JCg==,type:str]
+    lastmodified: "2023-10-09T02:32:10Z"
+    mac: ENC[AES256_GCM,data:ZOur7vfJ2E/1ifJkj/BAnech/iVF2Tt2qLaMNYiVWhvZVaOMAdibI2XaCKSE6MYfBmrcw53D4uWs534kiK5lWLXemsxkKMmLhhRHulRhfRnkM50sYV0Db4YFPzqihxmhwiAWNC2Sos5gYhH0v708RnpdD2caKa7inkCL9eOISEE=,iv:9GweEMIRO8pRlnWNbEoZnJEnTmv2TrEKPWaH6V0JnOw=,tag:yFqfqLfbf57RmBpp2pkvkQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
