--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:rcCocxQj7ZVDprBfyPF+FQ==,iv:RGVUn/2xN0JDoilYk4lwaMRd6f1m5nLSXX7oeSaiWiI=,tag:zEk418EIQACUAF7yyrbyRA==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:ZukxZZh+Qd4sz27qdpNMs+JP6XMC/76VMPEdwbo9IlcoJ3n2,iv:yOvzxkVsywMfKVXlitqmEtZfJpLVaHrT/rAjONN41GY=,tag:vfrMLY6P0/I5di1bWlFjGg==,type:str]
-    SECRET_DOMAIN: ENC[AES256_GCM,data:4nXzM+FPvQN+oRE=,iv:Ej7CWvLSpWBdoAn47fVyZrnw/e1dXyny2VJ077lYsQ0=,tag:SBkSPvhbZK5LD4qzac8hlw==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:/utiCWgZuX/HFc7HTVWlFQ==,iv:ASBgvQNwV0NhfKDgMlwh99njxZCFGgIV3tDl/kIUdZ4=,tag:DfaWjOJMclSbGSOFL/Qz0g==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:brdSkwLYfObalctwPVkA1GVQ8+00JMqOVo4Uy9vUTapyewTN,iv:Jw9ErdDJUBjQfoV41pHBaqmnoU2ut3spREUraz/XJmg=,tag:wYp6S0+Sqb7dVKO4DZT+cg==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:+SDf3Cx+gfDQ8vQ=,iv:aAE0uUAcn25sSui1YnChM3gBdKIfbFwABO3/zfAUe4c=,tag:KR29dYt2+gkO9Q49P5b9CQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQN2tmN0RXVjlXMmpmRDdq
-            V2o1dUxkUVlxQUVxMHJpQzV6aVdMUTVKeWo4CncyVEdhTVdvQ0tmQnpnNXpnK3Zj
-            QUJ2YzMvRFlnb1RTRFo3L2dvbkc2U0kKLS0tIDk1U0ExRStBQVBTOCtNVTB5LzZ1
-            dUZScDkzOVpIdXArTHU2NHBsUjZSczQKFDatEjCtzJGabVCOXvPD3ZskINdchmgc
-            os32A6jceZH+Ij3goVrGzwOEMYaauoUpvzsb95ron7o5iV/bhRpgzg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRV0FGYUZXMFZZRndjd1pa
+            dkZOOEFCS1BCQVUzSThEcU1LTXp2Y3FzWUdBClR0SDlwUWExUDhoYjQ3NlE0RlJQ
+            eEtvVEYrT1Z1QkR6UlJ5TitxcWZFZW8KLS0tIFdudTRWSHFES2FmZkNXajI2ZC90
+            eGFZK0JRdXBKZW5NdkZEakxkY0xsaUUKZh6OPpErHnAaIRcnoiFphdp+nxFgZrU/
+            d+Xjc7dkP2ResEPy2dQnAS8YvoNEgF4ida8nXMjKLkoHx/sgaP7alw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T02:10:52Z"
-    mac: ENC[AES256_GCM,data:iIp1tdndLPowr9KJB4bQ8N99TXISjwH8/wOVb69rlPyoNbxMb5/b2L6kUNdTMe9pQRKt4RjW5Z4IYDSwKxQoOJix00U7dfKwhxlbqROdpzqe4kdTZktp6SetCuFspYRgwZlLjTG+o/TD2m9TLW3OpcHiuf1kQo/CVAYav3gmeiU=,iv:B9qIUKaTLuly6gd/QOJ1QNwX6Fos/RiZnUV6EubAvTk=,tag:zVWYR5/IbRfBox5R8CtbNw==,type:str]
+    lastmodified: "2023-10-09T02:32:10Z"
+    mac: ENC[AES256_GCM,data:DUVj9Wfs1h3FmFPfnXHBsSvJWGbehPYLUPl/AKA6oqlXI8p1IKmEo8BcH+rCeS0tF5obQezLa88rg8/53+REY2oCQhdDGd/xw3y8ss+ahFnS/VflYXNtnwHLeOuQeSI7N/2xvCX7lC3E4MENUGC4NxofDw+m0zZZcJc2sa+016c=,iv:VUCVOkMIA+GIbl1MuX4UOGO8pJYL9KsfziG7zZBLFOc=,tag:b7xg6wS1h3LNICHgJ0IBGw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
