--- a/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: grafana-admin-secret
     namespace: monitoring
 stringData:
-    admin-password: ENC[AES256_GCM,data:p9vu4lPLlBg=,iv:N52qFr/xzH54UXV0ZyAsIYpjjFqYvthotA9KhgpU4L8=,tag:N9fl/6+nTdufYFku8Ok/jQ==,type:str]
-    admin-user: ENC[AES256_GCM,data:DyrKyJo=,iv:6XhN5JETJOncrQ3FCxAbDUCQ+yNXP6rmYvfdykbk/Vw=,tag:6xESwbrclQXTZMSqQI3hdQ==,type:str]
+    admin-password: ENC[AES256_GCM,data:t6fapYy4WYA=,iv:a4MdyyVwmRlkxeV8dKq9aRsRk6ZOVG8GFJknVY50Y5w=,tag:O1jkTeGbNZZT0DJaaB5lfw==,type:str]
+    admin-user: ENC[AES256_GCM,data:rDM/F+Q=,iv:xi9T98P9YS3K79AN5RDkZaphV70Q7yVBEIgjdpomTFM=,tag:Re4Dnk7bhodg5apXBMX4fQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWS01CZ0tMMVlLenF5VHZK
-            YXBDdW9Gc2NsL1gveTI4SkpFV0NyU002eWpBCk9ucSs2Z293WGtiSWZ3aGRxNlZK
-            SkdVY1VLVGhSU3d6VEhXcDNkRStvOGMKLS0tIHNJaTNUSndyZ2c2ODZlWjlMandF
-            L3Zuc0RlSEI1UE1XdmZKbnNKaDI4aFEK84jS83NIj0xdm+QYDtOl9VZeDIocohiI
-            +Kgev9P5VAsKeHJxCFuRyosynAJGmBpc4LotgBxKTYIC0kwx0Fn6GA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6VDdOby8xclBqQ091SDMw
+            N1VMcHVlRnN5Z3RTYWEyNUVRV085ZkFWQ3dFCjJJbkJPMTF4VDBLS2Zna0ExcTVh
+            L0NGbVF1dWhRSDlyMEFiQllVb0Nmd28KLS0tIEw5dnQzei9pZ1FYMTdhTXhsRmhK
+            eDhQOHR4Q3RidkpIQU5UaFZrcElPdHcKv9A3x5pLUCeDDx2la1oxJWA+JIfry42t
+            Ye6ya2PQCB74Oa6J90WvITg4a3JmA1FPFon2Ybuf/Riua4yb1FK9cg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T02:10:58Z"
-    mac: ENC[AES256_GCM,data:nTKaO8st/dxuAQRzy3Dg7fJ6Z7rOJQAWjUSW8K7fRLVRCxUeeEvtdSoZAnOvtuSTB0kQlJhS4lKKUzrY9ztvkNI3te6oapl9rTCm7gQOXn3wjy45ao8G7C+Zoezm71d3NUnducj9vYI3+INa7rkFL7AYI3cdvsoNGZGnwG6mLW8=,iv:Q+ZBpHDfsi3zHoKhgTqts2cVAl7R15yjS99YPlBuXek=,tag:PvPAc5twqGqod5k3v8p1YA==,type:str]
+    lastmodified: "2023-10-09T02:32:16Z"
+    mac: ENC[AES256_GCM,data:VtBY40VSFmsQN9Ihwwrm7vHCrp8CepTL4ULajXp3k2X6QI+cFLrqEU7/ANLRaO3SITEDSrWWjL5LEqazERF+9x+6mz9ViOiby4VmyfqJP13YMNycQrEI5CnlpBBOLqGqaQ6UBI2SUINXKu0rqziOHsICJLG+kk7K7U/Gd9AMsoE=,iv:wbZpN7RbhA4VKBM+uwlRFFAQpVCML6qMJeQg8HhmsCc=,tag:laIFlMgTH2zW/uTHkjzSHg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
