--- a/ansible/inventory/host_vars/master2.sops.yaml
+++ b/ansible/inventory/host_vars/master2.sops.yaml
@@ -1,4 +1,4 @@
-ansible_become_pass: ENC[AES256_GCM,data:wYZucGwq6+4=,iv:5ke27encP4ORF1gZwzvdkjqphiwjq6rzw+AmInilTkU=,tag:KKdTVh1Y7mP73jTrAeE5eA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:CXgjprkEGpE=,iv:fq+g+xw/jj+FKhE/paOAQwyf0Br0FB0z+tMLfQymWeU=,tag:oRNJpUY0rMmmSZLKuqAcpg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -8,14 +8,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1VzdKYWNIL0k1NWl2dDlT
-            MXpheUtpNVpJWjcyZ1ZkSkxwOEVJTStPZ25BCkNUazRpKy9BK0lyWUdzMi96c0Fv
-            NnRYWHlNKzQ3MmhLTDRhdWdtUEgzRlkKLS0tIGxkUnZBMFZ1VWpYVG5SNVQzcjVE
-            WXFZS0xTSjE2aVZvRmpxMUQ1aVQ3OFUKduMrPQljR9ftWIx6mvgouXikTomC9P9R
-            WSJ0nDF9p5rkD9q3udkzB1I0VEQGfsG3pwrp3LGDaeDuvB3zxzL3XA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFQnN3VXhrck9sRmVIbk1D
+            ZUc1eW5jYjZEQUlUYWpTTlI5dFdtY0ZYZzBjCldxbitjUmNFRFlPL0szakN1bk5k
+            SkVnZnhocm1KWUVtUkRiUUMvbzN6YlkKLS0tIGRyN0VkWUFVRml0V0pZNEQxTTJm
+            endtSUJKcExPazZiN2NPR2k1Kzk0V2sKirIqe/eTBA3gadgT7DhrMHSRo2BXGLe/
+            dwqJ5ltxB68gUg/7Rgo+sQhnHsp4mpulsx/j84dzEGHtoEQDVR/a3w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T02:30:49Z"
-    mac: ENC[AES256_GCM,data:14TAaDpJyEFGUZX7NDa4Kiqo5NUaG38CC5moO8wtzihx3qCmy8SVuX+awdjo6eThvqaow8SD3Wwfk7E4og6omjRuHFgW0W8C/hLoo/SwHzXegIowLNzl27C4igQHTYGWEQ5v+CTdHCfGaPohCZYFaE8WgudlJtll+2FdJ48jWZI=,iv:MLJzNZRbQukDO+h5jQOPyYhVO6W8gF7D6Aa2LJ0qPkQ=,tag:fVEqzb/v2uyALfSlVA4UzQ==,type:str]
+    lastmodified: "2023-10-10T00:57:23Z"
+    mac: ENC[AES256_GCM,data:hH/TR9rDgZxq2PAaR4SP3zd8POi6smqz0f04DOA0wWHUuaKkoIFo2+1co3XSsZX7a1gO9Nm7ZFJRrxOEUL/Im7Uen4NgfrOeEkQfw6D7tooV/JUDqhL9XLzNNgW+GKroH6ftyWKXLG5PQnNIH3OhlSU4WvfS4SidQrCoA5fTjxs=,iv:yjQbKLmSL4JKeuQQGivAHghHJlt1EJWxEjVO0nsQuEE=,tag:k06v9Iic7BkJMWaV1g5k3w==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.0
