--- a/ansible/inventory/host_vars/master3.sops.yaml
+++ b/ansible/inventory/host_vars/master3.sops.yaml
@@ -1,4 +1,4 @@
-ansible_become_pass: ENC[AES256_GCM,data:Jm8G0rukpTQ=,iv:FSbx9LpbQ0b21CPF6LrmuXfwpef1NsNukTed0BiZ5JM=,tag:6o6NpAZbLCyNSwbHfIuTfA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:WdLFK7xUW+w=,iv:6gtYUiBA9wg1lcsahIYAJO76x6QcoI6G/Q3n1On3MT4=,tag:oGZEQH7xKNdMd0z/AjzB/A==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -8,14 +8,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwdFFVVHVyQUl0Yjg4ODFw
-            S0ZDM2NMQ2F4ZGpzbWw5bHdhZUNnVFRreWxBCmIwc2cvSVJRYlg5bDNsY3ZqUm9h
-            NVVXcndIVE1uOGgrNytyRGF3eUIwcW8KLS0tIFBMdlFkdzVjRGVycWRGRVJCQUp1
-            Ni9pdFFUUE5uQStlbENjZmxQZXdjTkUKjtsqACjzNn3Zjk5FzAqZWX0dNauSJj/s
-            /65cjZxXCu6oaT1bGtvsNPwEvk4tz/KbhpR4ER4otGDui3caFqOZkw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoMEFXRHlBV1FEZXNiUXpO
+            M0N2L29mckxmMjF5RjJJN0ViVnhQY3lpU0MwCmdsZTNzZTloYlI5cFBMVjArWjNy
+            WTdoU1RweUNTVWh4eEtWK2dvS2pERmsKLS0tIE9oNE1nY1ppK1RGY3p4VDlZVjlx
+            M3ZwR0dQTG5MZzQ1TTZrMlgwZmVHMzAKb9Syh/yGxaKSw3L+ZbiWRHTFnFCcu8Za
+            c2Axvxtcpd6pTohIjv1QpRPOGSiw77ZpIdrYun0opWNgwjC+gwPLlw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T02:30:50Z"
-    mac: ENC[AES256_GCM,data:DmCM5e2Q08mnIntQWXQH2GrWlklGLGw7rSOS2KFqv2Leu3Yk7EP2BWHaJ5H0XBqSD7GQmxi8dOZNEmbtRvukmf0h12MkibM3MrjPwdWUh79nIQmg9wkRcp/ZVlbniOg7PimIaEC0xMtCJhQyMwC+uS45pMaSQKB5SMcOzDF9QaA=,iv:MhrsVvf4q7QbG2cEA9z0JTio9PEZqsRDxomjCXSkdf8=,tag:qgWG8/gj5ya+W40w67TgTg==,type:str]
+    lastmodified: "2023-10-10T00:57:24Z"
+    mac: ENC[AES256_GCM,data:lPXjW1UwwlEB51c2d0frR/LeQO1vU3H6urBiVzPYOTxblVCFfprp0MPJyhQX8ywC0n6rhb+PxSnqMkfTyGYQR9kSGvlYbuThN4NB9Crt2mwEb5t2us/fyQzbkKDHkqcUUr6nel2waKQkqqmalLqjMss2WpkbWVL99yyaNsgG5Rs=,iv:NwYeQuL9q7pLRlxbye4pORMFQwc3RDwXnXWpLoxC6+k=,tag:QrzJmmiiiwLMk1h3J0K1aQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.0
