--- a/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-user-auth
     namespace: flux-system
 stringData:
-    password: ENC[AES256_GCM,data:ldAqJWqVBEPLtCZPIUZNx0xkCrr4aLaSZRTfrWC/tmP1GZ5R5DTYqHrYwaSE1TmHH6q2DzTNTTlEA5qH,iv:c36NTkEVHiGRKd7rw0YbJul/040zpVN4Cr3qcaG51XE=,tag:TrIO2bUxE6vSts0zM17bwg==,type:str]
-    username: ENC[AES256_GCM,data:/zlTCCc=,iv:3q3e4VDuO/pOZ7yOLNQTQFfZWRJlz1EDFPV2arB+j+M=,tag:t18lzco7/Py+FMR/TrF0Lw==,type:str]
+    password: ENC[AES256_GCM,data:1YqQnojmdtJiTTnWsjq6ThA+q4N8WujVnesWLABGy0u6qo6MhjdayhLfxsktwsAMca2KeoQocO/Yt0RV,iv:Hp2B5fqnda2BxfzEd0PwMsHojVlFeBsBvGKaGZSj4fY=,tag:St+DWqfu+hL0qTBhOgaDtQ==,type:str]
+    username: ENC[AES256_GCM,data:SC1ni9M=,iv:HUEY7/QsMw0MjganC+r9206ZB9Z03SbNE6Gr2uoKbm0=,tag:EHHBrfPc3JmDUvrTQWiT4Q==,type:str]
 type: Opaque
 sops:
     kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBiRFQyUEhMMHZEeW1rb2Er
-            bDA2c1diSmRib2l0OWRSdVU2SFAybFFBQmo0Cnp1RSt1TjNnRnRISmxXZDF1dEEy
-            U0xZWEsyVkN4RHZYM0ZYeWVTVnoyREkKLS0tIHRTODByQU1qc3JUZVNVSUpIcWtm
-            REw2NlhaaTlPeHlwenY1L2EvUnZ5UjAKcSe9sQT3ei+r9XJUA0lDmoYwQoDHknxY
-            62ysVyfQDX2+oaDy756PEoaMGgnWj8gpXBpMTkhIAiOa+4HjXSthig==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6NGJPeEE3NlFpeHBuY1JN
+            RjVTWnM4WEd1eGhIK0x0NmdDZHhBR0dvT2dFCmw3WTlsR0UwKzlxUCsyMmFKSm15
+            em9NQ2RnaHFTU1hkM0Rwa2xVTVZTQ1EKLS0tIHBGMnROamdrSExXRHIrM3FPNlVK
+            aG43Z3pUc0hhMWp0U1dWTXM0SUhLZkEKxR6pcFI1j/UCsDgPHy+LjFxpRVySMydE
+            hUzdPkjOLr2fAqgr4K0rNunAU232HCEaBLlSZb8XDYNgcHmNFTMDkA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T02:32:31Z"
-    mac: ENC[AES256_GCM,data:HgYYfLTljWQ0xTKX16F4/A/rVk2BxbaG+0ntBP14pfwihawp+WTk+P9PpHq3OtH/AT24f6avbsZkroxFMQl8N5dFwQDvBd8RzNzKmTq6MX2EWZ2K3hfWGN0p1q8puZ78K71HHAwQZPhiFTKstS+INZ8thPzsBPLFDPiYXtZ6NgA=,iv:JZuLHUMCGaY/JGf6cb99Acqbzi5euFXV7Szzo0OCUns=,tag:jSZdYH8h9hWkmyhQnxusWA==,type:str]
+    lastmodified: "2023-10-10T00:59:04Z"
+    mac: ENC[AES256_GCM,data:v3QXI7yySQN7zjykXtQeB+UYqBON5fljY8hWvMg93oFisRuUo/mGyMO36qW/YVesByqLZcowBaNTh0DsqDD8Hcb+n+LdIg6ZhKlANctXxYvJEtupzxYTsswJsrBhSlceeFCnea1tl4JQ/oePklZ3QCzuRt3Z80MPHm3XNS/BGqM=,iv:psxfXECErW1+gzqF28U5XqKjmHLKf3nntgRCmwBBlR0=,tag:OYWHeHBOVXYVfXe8Z3qSVw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
