--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -4,7 +4,7 @@ metadata:
     name: cluster-secrets-user
     namespace: flux-system
 stringData:
-    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:nsNEmWWAPQAzGF4B,iv:ZJlEY8w9Kx6wLrNMDSLoBNZ7pDeDvk5UWP+ocPgMjeg=,tag:rJ3C/00UvDdL55Uv+z2qVg==,type:str]
+    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:4VoHt9iwKEescDY/,iv:pq2UaRH7L4UFhKpbM86mMiFYZgGAC9Xgvs0C245mwzk=,tag:E7PYg5eIplQuYEA92MDwhA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -14,14 +14,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGRmpvUjNybU9QTUhkb1dR
-            Zi83N0FYQWFqN3JKZGtweUdDcEdhNkV2ZkMwClg3bzQ4TXNHOEFqUStwUVZqd2ZS
-            VDR2WEsvZTlRUWYydHcrYzN0bUhDNkUKLS0tIHRDVkxGczdxU3BtSE9FSWJFZVlC
-            YmhMUXdNbnNqVDJEeDErY3p0WDAvV00KnenyK7qTceaqfjAPe7Ey0e+4RXoONstG
-            fsDZc+etOoqCAqeIZ9sDdiGft8OPSfflDrBt4Qc9lj2sC3ycpb8szQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Z240bGYwbGE4LzJjMDFO
+            Y2VTakl3TEZtbkgwZk83MThWMWhZM2IvUVhjCjlaZVRvR3JSdUJhZlIzNTd1eUg3
+            bTRoT2lTRFBNYW1UZWhLaVQzS0I0Y1EKLS0tIGRZMVlQNVZ1WmtDSHZVMEtEaEtZ
+            UFUrVFRidEZCV0J1WWZjZ3U2ZzVvWjAKuc8Q9ikdEvsKRH32UNN5FG/8wixjfot8
+            gx5cSyKI80dZd32sdrSsGksuZcoz7VGO+SJQN4mXNd+8e256b275rg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T02:32:10Z"
-    mac: ENC[AES256_GCM,data:ZOur7vfJ2E/1ifJkj/BAnech/iVF2Tt2qLaMNYiVWhvZVaOMAdibI2XaCKSE6MYfBmrcw53D4uWs534kiK5lWLXemsxkKMmLhhRHulRhfRnkM50sYV0Db4YFPzqihxmhwiAWNC2Sos5gYhH0v708RnpdD2caKa7inkCL9eOISEE=,iv:9GweEMIRO8pRlnWNbEoZnJEnTmv2TrEKPWaH6V0JnOw=,tag:yFqfqLfbf57RmBpp2pkvkQ==,type:str]
+    lastmodified: "2023-10-10T00:58:45Z"
+    mac: ENC[AES256_GCM,data:Jvtb17qNatTk9grNZVrUOm6Eoy53VRYiQRZVjNsLkuv3R7lSqN+QsppHLJd8vEZilDCFjj+TxWPqJfqqkWE3APV8d3rYxKfIC7A9qZ939qXlyEmKmLevPWqmwQFmntH6/L4kQQtjGz1ZxGairokhROczq8hrU58HasifiaBOlt8=,iv:9pEEFXy9d1jCbOMG/hXxfDknTPC2QPFtmLlSBHF0eIE=,tag:aBGeWiNRi7dlFEuGUwUw3A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
