--- a/ansible/inventory/host_vars/master1.sops.yaml
+++ b/ansible/inventory/host_vars/master1.sops.yaml
@@ -1,4 +1,4 @@
-ansible_become_pass: ENC[AES256_GCM,data:VHe9shFJ2UI=,iv:12WKN6jiYZTDqbTdAVn1Sf3jCV3RLovBELdeGzu1KfI=,tag:kGaEvPlekbfOFBE1H0rGYA==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:TaP5IJgj2OM=,iv:76xhuWNJP/vKAdD3+2RrR0CR9/Lx4hSyXDba1Rt1zmo=,tag:ZC1u6eTDQPy/oeqNNmt0XQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -8,14 +8,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxZk10bDdFUTFaSlhhZTJr
-            TFNpRVZwaC94QXZqVkRwRThlMUk3TVZCUzNFCitkYmtQclZpSmdEYzErQm9iVmFh
-            WmViM0JSNmNja2hHSnhUL0swM282aHMKLS0tIDRJRHpiOGFsQ3JHaUdBOE1MQk56
-            Zi9GanBmUXVYeE9yYW9UbWYzOGZvYXMKU7di0qv46/hFqt6E4MyOps085iaNNNzx
-            ugpw03TvOpydmVOydS1KBBnmQevT9avL9SoKbgXa5pwXmpckog0YOg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWVWZiM2VNRkl3M0hMUkVz
+            Y2JqWmFGdmNOODFUTlNXeU9TMzhlZ0Z5Zlg0CnFZajV6MGFqZkc5S1hqemZ3a2Ja
+            ZUlMSk9KcjNwdUFvY1pwM01QL1JqTFkKLS0tIC80WE1xUi8zWm5yd1R5Tlpzc3FG
+            THpTV2VNR3I0MTBKeHdRODlJbklhZ00KNRfbKTBAUZa3SSF0mlJ5GNZXpeAQqUah
+            gzYycQnOKe2qC1d9sNlXbPi7D1Lzunf0b1h2Z2GphgBZF9R+zSUx/Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T02:30:49Z"
-    mac: ENC[AES256_GCM,data:StRQImhg0GmPNUQb1eHi6bIOhCwsrE/hee3LYKzayN61pz1KoTNQu1LvuxqfAb+muaOAoxYXHdjEMjKE3e2Rbvpv2A0QZYz5lythJbNHS1q6CUCDZPOr4LEEOxIeEByTnmy2fiQVu48VasJP/L8gpo7rEsUpv1LxN/5ixCmYDf8=,iv:dxW4RJMfIEF998V7GXzpMwCwIlICKPzOz229tSgbAr4=,tag:abYouyEZ26C3rekT0dOu9A==,type:str]
+    lastmodified: "2023-10-10T00:57:23Z"
+    mac: ENC[AES256_GCM,data:k7sFlgbeWC4EfptDWX/fu+T4VAXindrlgMLt2N+Y/AT0+qnOQ+DeYyJFkYlOKPcHz85t/p2xnwvjpnzvdwKi82+TyN5BAbNmrypyaRyu7atfoGBTiotlqh1GlQZFH/RuSmjVOXKRL/U9JPlQEXAwyoERLPleYATVsR8nyf8b/0o=,iv:Ib53rgHEyVV29p9YKNc8OV8ALeIrfw/J7tj/t8EzaWw=,tag:I4cXHUpPUw+H8SskAHRi1g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.0
