--- a/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: grafana-admin-secret
     namespace: monitoring
 stringData:
-    admin-password: ENC[AES256_GCM,data:t6fapYy4WYA=,iv:a4MdyyVwmRlkxeV8dKq9aRsRk6ZOVG8GFJknVY50Y5w=,tag:O1jkTeGbNZZT0DJaaB5lfw==,type:str]
-    admin-user: ENC[AES256_GCM,data:rDM/F+Q=,iv:xi9T98P9YS3K79AN5RDkZaphV70Q7yVBEIgjdpomTFM=,tag:Re4Dnk7bhodg5apXBMX4fQ==,type:str]
+    admin-password: ENC[AES256_GCM,data:z6XS0x/0l5I=,iv:TTjMLHd6Kh+Kf9PZ/4KGRiJeaXsRjDmS8pVmrH589Pg=,tag:Rk1TatztTodTBXLSsbUtlw==,type:str]
+    admin-user: ENC[AES256_GCM,data:TbX7VAI=,iv:lo2j9ED0Ok2LU8OIm/23c33Ntre6SDRgQAArpAvkluw=,tag:t/ooD49rqRQ2QbOdsPO1Qg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6VDdOby8xclBqQ091SDMw
-            N1VMcHVlRnN5Z3RTYWEyNUVRV085ZkFWQ3dFCjJJbkJPMTF4VDBLS2Zna0ExcTVh
-            L0NGbVF1dWhRSDlyMEFiQllVb0Nmd28KLS0tIEw5dnQzei9pZ1FYMTdhTXhsRmhK
-            eDhQOHR4Q3RidkpIQU5UaFZrcElPdHcKv9A3x5pLUCeDDx2la1oxJWA+JIfry42t
-            Ye6ya2PQCB74Oa6J90WvITg4a3JmA1FPFon2Ybuf/Riua4yb1FK9cg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5UkdkbnloVFBGM1pybXdz
+            ZmhuRVhvQW5teEhwM2VaVDFFd3RSeTI0ODFBCmU1UlVqQXdtWEdkUi9vT3VXL2NM
+            cEROV3IxMStHdDhsWlV2VmVSTWc3MVUKLS0tIHVJWDNneHFlN3REWUhrRjE4ZG5O
+            WUNSRzl3V3ZTUTVpNGEwUWw0KzUra2sKXBKBl2yQW7zXukQTmoUPNUQTzMvBrwXg
+            a506IHj3HWzGtzbKNEjVDn5w4uHcFib/uZq8LaEfeoN34iyJBZe3jw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T02:32:16Z"
-    mac: ENC[AES256_GCM,data:VtBY40VSFmsQN9Ihwwrm7vHCrp8CepTL4ULajXp3k2X6QI+cFLrqEU7/ANLRaO3SITEDSrWWjL5LEqazERF+9x+6mz9ViOiby4VmyfqJP13YMNycQrEI5CnlpBBOLqGqaQ6UBI2SUINXKu0rqziOHsICJLG+kk7K7U/Gd9AMsoE=,iv:wbZpN7RbhA4VKBM+uwlRFFAQpVCML6qMJeQg8HhmsCc=,tag:laIFlMgTH2zW/uTHkjzSHg==,type:str]
+    lastmodified: "2023-10-10T00:58:50Z"
+    mac: ENC[AES256_GCM,data:YA9dti+0ODl5svvu7z0mDmHZOjxSN0sj6otJbUj+TVZijWj4I8+ehdFG0ChMyIQBsZbUFSI3Yug0k2EApBO5MKw3zsxODh1NsOXc/qxV+C9BkOBPW1027/wrfrzfaangS/BsdaKdnF+4SUmTzXoACC5tVVcEe0wPK/FI8bfHXj4=,iv:l2542mctjcmqQbfLR/ztOgT0r9LvJRn6gtnR9wRz1jY=,tag:VktItHg6GgqaATFavhezMg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
