--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:/utiCWgZuX/HFc7HTVWlFQ==,iv:ASBgvQNwV0NhfKDgMlwh99njxZCFGgIV3tDl/kIUdZ4=,tag:DfaWjOJMclSbGSOFL/Qz0g==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:brdSkwLYfObalctwPVkA1GVQ8+00JMqOVo4Uy9vUTapyewTN,iv:Jw9ErdDJUBjQfoV41pHBaqmnoU2ut3spREUraz/XJmg=,tag:wYp6S0+Sqb7dVKO4DZT+cg==,type:str]
-    SECRET_DOMAIN: ENC[AES256_GCM,data:+SDf3Cx+gfDQ8vQ=,iv:aAE0uUAcn25sSui1YnChM3gBdKIfbFwABO3/zfAUe4c=,tag:KR29dYt2+gkO9Q49P5b9CQ==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:pJUUoBTsDOzXSDT5FmyeQw==,iv:ALVgAWnD79Yuh1FYPf+cGvsuFI6GDxwAZgS2wOREjL0=,tag:LYg+pfoUAJ3ldmcLKFg8Dg==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:q4ZNtw0U54139U+HtPvpcTSStWFERzoxHQLZ5WZ5Qq42zZyT,iv:OzPaR8VNiLG5QpVbncDJTP8GJ462fvuGe9dPA1ANOEc=,tag:ukvIUfoKKHYY4RcVeHjFqw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:kfrY6v4WVlIQ5KQ=,iv:wpvjm4m6iFUZI3L/QgO2gCVdM0H9M6tl5FRlXyYeczI=,tag:c/YrOuDbITwveOVQT38aWg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRV0FGYUZXMFZZRndjd1pa
-            dkZOOEFCS1BCQVUzSThEcU1LTXp2Y3FzWUdBClR0SDlwUWExUDhoYjQ3NlE0RlJQ
-            eEtvVEYrT1Z1QkR6UlJ5TitxcWZFZW8KLS0tIFdudTRWSHFES2FmZkNXajI2ZC90
-            eGFZK0JRdXBKZW5NdkZEakxkY0xsaUUKZh6OPpErHnAaIRcnoiFphdp+nxFgZrU/
-            d+Xjc7dkP2ResEPy2dQnAS8YvoNEgF4ida8nXMjKLkoHx/sgaP7alw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDL1VXelh6akFoVlpEZGhh
+            QUh2RktWMnZ5OGZjMitmamZqaC9BZUpiQWhrCkhUUVBaMHRRSWJnRGwvMXpaOEIy
+            TlJFUGxJQzFXTE5wanpRVzVqaWt0OVUKLS0tIEtDUXA3V2FnRHdadGUvb0VSTFlr
+            dUFVV3AvemcwSzdwV3A2cGxZTDl4WTAKw/rvMaryjH6U4CFVfRtCo/C+0YV8KP5e
+            vwiSsj57Y6vRwz9Hla2BirRULIRa+Cs7s8M600QNFeqhUsvUhUsyMg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-09T02:32:10Z"
-    mac: ENC[AES256_GCM,data:DUVj9Wfs1h3FmFPfnXHBsSvJWGbehPYLUPl/AKA6oqlXI8p1IKmEo8BcH+rCeS0tF5obQezLa88rg8/53+REY2oCQhdDGd/xw3y8ss+ahFnS/VflYXNtnwHLeOuQeSI7N/2xvCX7lC3E4MENUGC4NxofDw+m0zZZcJc2sa+016c=,iv:VUCVOkMIA+GIbl1MuX4UOGO8pJYL9KsfziG7zZBLFOc=,tag:b7xg6wS1h3LNICHgJ0IBGw==,type:str]
+    lastmodified: "2023-10-10T00:58:44Z"
+    mac: ENC[AES256_GCM,data:ypuPQEiWwMty6fi6OcPMrpsEJy6wxBG3bX+oOrXBbpVvivpZ4pqwSw6UvEJtweEPrchpTrEQF4NWgyME7FztopxAYxvFc7r0G/Nnv1VM4upkrGwv9MKIiFUSL3quybqE5TLEVi1FaP2LrcG35Bu3Oii0umRnjZgy853ydkT1EPU=,iv:Bba+U1IaGvqHE1DrS+BhmWsSOeZPP2HuSP1ogPsU+0g=,tag:h3K7WoN2I5CFRP0wm05CgA==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
