--- a/ansible/inventory/host_vars/master1.sops.yaml
+++ b/ansible/inventory/host_vars/master1.sops.yaml
@@ -1,4 +1,4 @@
-ansible_become_pass: ENC[AES256_GCM,data:TaP5IJgj2OM=,iv:76xhuWNJP/vKAdD3+2RrR0CR9/Lx4hSyXDba1Rt1zmo=,tag:ZC1u6eTDQPy/oeqNNmt0XQ==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:G3BXEUhKe1Y=,iv:4NxcxT6PsOvJuXKxCE9NtDRZ81dJJlX6KP65QndiCM0=,tag:vr212Japlz3n3mFSa+cOjg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -8,14 +8,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWVWZiM2VNRkl3M0hMUkVz
-            Y2JqWmFGdmNOODFUTlNXeU9TMzhlZ0Z5Zlg0CnFZajV6MGFqZkc5S1hqemZ3a2Ja
-            ZUlMSk9KcjNwdUFvY1pwM01QL1JqTFkKLS0tIC80WE1xUi8zWm5yd1R5Tlpzc3FG
-            THpTV2VNR3I0MTBKeHdRODlJbklhZ00KNRfbKTBAUZa3SSF0mlJ5GNZXpeAQqUah
-            gzYycQnOKe2qC1d9sNlXbPi7D1Lzunf0b1h2Z2GphgBZF9R+zSUx/Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUbEM3Y00xWnF3RWpqbHpO
+            RnQ1cnRKNEtvWHlKRVRIMjBEdkNLb0pPUmxZCm9rNE1LeHhBNDVMSVRkME9hWGEr
+            VXI1dEtKMzZNQ2ZFSjA1RmZnMlZlK1UKLS0tIExTVCtxaW41bWw1WWcrdWdGaFgx
+            aVphOHVHWmt1NUhvRWdWTERCUVpNTDgK26R3OXhAtOudy81SbKOz4PwqRzk47NrQ
+            1XOEC/52IaAdI+IsMgnBX/GRVKreJ5kDs+x5WjEDzgZ2Vhcyts9ULQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-10T00:57:23Z"
-    mac: ENC[AES256_GCM,data:k7sFlgbeWC4EfptDWX/fu+T4VAXindrlgMLt2N+Y/AT0+qnOQ+DeYyJFkYlOKPcHz85t/p2xnwvjpnzvdwKi82+TyN5BAbNmrypyaRyu7atfoGBTiotlqh1GlQZFH/RuSmjVOXKRL/U9JPlQEXAwyoERLPleYATVsR8nyf8b/0o=,iv:Ib53rgHEyVV29p9YKNc8OV8ALeIrfw/J7tj/t8EzaWw=,tag:I4cXHUpPUw+H8SskAHRi1g==,type:str]
+    lastmodified: "2023-10-10T01:13:05Z"
+    mac: ENC[AES256_GCM,data:8vAIB/mVQQ255r6XIKpAnHl1Kv3wXD2VaZtLTcdJulOovt4qyQIlRtcmU+5BJzijDzwH/6+vt3W/B44A57iYi5JWYrfd5M0qTZ6aSKJWOxB1yAiVKlddSoNey8Ycj/lKxgyP6HwCS6vtoG1HtGK8HKtEwLYUU7B53BGMbJUYS9s=,iv:vc+60e220+iFcuI4zDXBiOn3WUyxPtMVhiCGAnbwsec=,tag:M8Rx3H4nJhPMnGtEjL1kkw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.0
