--- a/ansible/inventory/host_vars/master2.sops.yaml
+++ b/ansible/inventory/host_vars/master2.sops.yaml
@@ -1,4 +1,4 @@
-ansible_become_pass: ENC[AES256_GCM,data:CXgjprkEGpE=,iv:fq+g+xw/jj+FKhE/paOAQwyf0Br0FB0z+tMLfQymWeU=,tag:oRNJpUY0rMmmSZLKuqAcpg==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:bvBD2bVoO7g=,iv:pKvmW4U4/HL3g0oQNSqc1oMEW2fHm5beNL7aIFw4eE0=,tag:tBffc7S+ChEF2s3PdhsuOg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -8,14 +8,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFQnN3VXhrck9sRmVIbk1D
-            ZUc1eW5jYjZEQUlUYWpTTlI5dFdtY0ZYZzBjCldxbitjUmNFRFlPL0szakN1bk5k
-            SkVnZnhocm1KWUVtUkRiUUMvbzN6YlkKLS0tIGRyN0VkWUFVRml0V0pZNEQxTTJm
-            endtSUJKcExPazZiN2NPR2k1Kzk0V2sKirIqe/eTBA3gadgT7DhrMHSRo2BXGLe/
-            dwqJ5ltxB68gUg/7Rgo+sQhnHsp4mpulsx/j84dzEGHtoEQDVR/a3w==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQOWRWSkVwZ0JQUnJ6RHlF
+            UW84aXhWWVZ6ZFFBdE9ZM0FVVTBYOWkzUzNjClFyU2o3elQ0SVNMRFJZWi9kMktm
+            QzJud0dGQ2FzTVZyNmNyVWxsSVA4bDAKLS0tIERDbDR1UkRBUy9FYlhZZUR3QkFW
+            MlZoMmVBejNERU5sbnNlcWMvTnB6YmcKIdVbZRosGT0PJyNarlcqMbrD5Vbure63
+            amIx9RY2areBZ0kcNHEYF5BGHqLgnV4LMl1OBXYy0ghXitLji5X8fw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-10T00:57:23Z"
-    mac: ENC[AES256_GCM,data:hH/TR9rDgZxq2PAaR4SP3zd8POi6smqz0f04DOA0wWHUuaKkoIFo2+1co3XSsZX7a1gO9Nm7ZFJRrxOEUL/Im7Uen4NgfrOeEkQfw6D7tooV/JUDqhL9XLzNNgW+GKroH6ftyWKXLG5PQnNIH3OhlSU4WvfS4SidQrCoA5fTjxs=,iv:yjQbKLmSL4JKeuQQGivAHghHJlt1EJWxEjVO0nsQuEE=,tag:k06v9Iic7BkJMWaV1g5k3w==,type:str]
+    lastmodified: "2023-10-10T01:13:06Z"
+    mac: ENC[AES256_GCM,data:8MtbKvK370QxOBAyYBYbj/Eap/5Y8Z5n0IG6NyPQ5OsF9Xzymd5oOSnMG1ZFpAI71U3ObwqwRVdb0Lb2vmacUruNIzB+1nzrFLu1nCSgsTLYuUsnvNDCLg6sl6KlGqUGUSmca8mmZirkdK0C6gc0EnQ08PRSfanitF/reiRQP70=,iv:aAsk//KOZJDuzUR5y2nVOu9V0tTjZVBe0+UGHEJ+TXw=,tag:J7OSGLBRniAIcKLwCNtf4g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.0
