--- a/ansible/inventory/host_vars/master3.sops.yaml
+++ b/ansible/inventory/host_vars/master3.sops.yaml
@@ -1,4 +1,4 @@
-ansible_become_pass: ENC[AES256_GCM,data:WdLFK7xUW+w=,iv:6gtYUiBA9wg1lcsahIYAJO76x6QcoI6G/Q3n1On3MT4=,tag:oGZEQH7xKNdMd0z/AjzB/A==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:f31t4e1jFU8=,iv:6qJixSGh3ACtb5+fVAVF3qUzMHl1Miyq3ZRZng/vwjA=,tag:GNjxAj0bv6wCk9ZTG05uCQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -8,14 +8,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoMEFXRHlBV1FEZXNiUXpO
-            M0N2L29mckxmMjF5RjJJN0ViVnhQY3lpU0MwCmdsZTNzZTloYlI5cFBMVjArWjNy
-            WTdoU1RweUNTVWh4eEtWK2dvS2pERmsKLS0tIE9oNE1nY1ppK1RGY3p4VDlZVjlx
-            M3ZwR0dQTG5MZzQ1TTZrMlgwZmVHMzAKb9Syh/yGxaKSw3L+ZbiWRHTFnFCcu8Za
-            c2Axvxtcpd6pTohIjv1QpRPOGSiw77ZpIdrYun0opWNgwjC+gwPLlw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBsNk0rK0hDV3o0UTE4N004
+            YXB5S29QZ1hOTGUzQmxMV0M3enoyblM2dEVrCmhJbWZqb1BhS0ZkS29hUU1jdEIw
+            L2UvOStLZEpTeVhhUFk3WDlUT2t0dncKLS0tIDB1UW1XRk9XemZDUHBKWkFocDVq
+            NnpyS3BMczR3a0xHWng4WnVFckRIUW8K7SBshxmW0HF8ooiblQLtaNiPNQkprGNV
+            TItZxTAy+zHHWibFFfJzy766y5D052QdiNHZHWrT/cdoZLs1onGwMg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-10T00:57:24Z"
-    mac: ENC[AES256_GCM,data:lPXjW1UwwlEB51c2d0frR/LeQO1vU3H6urBiVzPYOTxblVCFfprp0MPJyhQX8ywC0n6rhb+PxSnqMkfTyGYQR9kSGvlYbuThN4NB9Crt2mwEb5t2us/fyQzbkKDHkqcUUr6nel2waKQkqqmalLqjMss2WpkbWVL99yyaNsgG5Rs=,iv:NwYeQuL9q7pLRlxbye4pORMFQwc3RDwXnXWpLoxC6+k=,tag:QrzJmmiiiwLMk1h3J0K1aQ==,type:str]
+    lastmodified: "2023-10-10T01:13:06Z"
+    mac: ENC[AES256_GCM,data:UJB1NYDwiJWifOijSN31eda3/A+9ET7rxSvJJClE69kxQoMGorUPzLNy+54Gv9zH9kfry7giUs3AcC1Cc/bVQgJLGtrZs+nxEuJtzZ5fsehlYXRBZXHPazEO1lemFMZFEMKIyrfJEevDb0lGZp5BauevNI06IMLYhprsE7Q8xUA=,iv:xm6Ht24elUeyY0uSjzYdYrkrTjpTQgaAvj2yIJTj5MM=,tag:AvRVU38w0vMTjTVOCO+RNg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.0
