--- a/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
+++ b/kubernetes/apps/monitoring/grafana/app/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: grafana-admin-secret
     namespace: monitoring
 stringData:
-    admin-password: ENC[AES256_GCM,data:z6XS0x/0l5I=,iv:TTjMLHd6Kh+Kf9PZ/4KGRiJeaXsRjDmS8pVmrH589Pg=,tag:Rk1TatztTodTBXLSsbUtlw==,type:str]
-    admin-user: ENC[AES256_GCM,data:TbX7VAI=,iv:lo2j9ED0Ok2LU8OIm/23c33Ntre6SDRgQAArpAvkluw=,tag:t/ooD49rqRQ2QbOdsPO1Qg==,type:str]
+    admin-password: ENC[AES256_GCM,data:Fbl+xbqthWE=,iv:JRHhXwZjNVSKfG0YCDakW5txuzpnMAP4jDDDr2gxbGM=,tag:x7jIhL8hSGXylpySGx5gwA==,type:str]
+    admin-user: ENC[AES256_GCM,data:VNHROvc=,iv:DtAwW6FJ9VNSFJTVzNSIrdPFlRSFqM9Of0YCbkHvphk=,tag:6PKDla8hyn48CqtDqtTmhg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5UkdkbnloVFBGM1pybXdz
-            ZmhuRVhvQW5teEhwM2VaVDFFd3RSeTI0ODFBCmU1UlVqQXdtWEdkUi9vT3VXL2NM
-            cEROV3IxMStHdDhsWlV2VmVSTWc3MVUKLS0tIHVJWDNneHFlN3REWUhrRjE4ZG5O
-            WUNSRzl3V3ZTUTVpNGEwUWw0KzUra2sKXBKBl2yQW7zXukQTmoUPNUQTzMvBrwXg
-            a506IHj3HWzGtzbKNEjVDn5w4uHcFib/uZq8LaEfeoN34iyJBZe3jw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGRUZDWFdjc0IyK1dETkZZ
+            VlF5eW12djducmpHbkFSMXVlU01QVFhXejFNCkRFTzNMZk5TbmtlSjI2L2ROeE96
+            VkR5YmlwbXBLZC9rVWJLVnBEZklNOGcKLS0tIHVTajRhM0NFek5mNXE4OWY0cVRn
+            SUthN3E5N2FEc2FhQUMxMFpaMzBpbE0KqDaJP58g0C1YViiVZwE1VvEW9rrhx4fA
+            HBJVKShDKh7hMsSunj99/+y6O2G4vBq9yMxbyzsiHtco5bRECnlHpw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-10T00:58:50Z"
-    mac: ENC[AES256_GCM,data:YA9dti+0ODl5svvu7z0mDmHZOjxSN0sj6otJbUj+TVZijWj4I8+ehdFG0ChMyIQBsZbUFSI3Yug0k2EApBO5MKw3zsxODh1NsOXc/qxV+C9BkOBPW1027/wrfrzfaangS/BsdaKdnF+4SUmTzXoACC5tVVcEe0wPK/FI8bfHXj4=,iv:l2542mctjcmqQbfLR/ztOgT0r9LvJRn6gtnR9wRz1jY=,tag:VktItHg6GgqaATFavhezMg==,type:str]
+    lastmodified: "2023-10-10T01:14:34Z"
+    mac: ENC[AES256_GCM,data:VPMQ6/8RZN5/8LWvoeDKpdFWWTOp4yoDy5rOIlV2u98rt4CJHAMOcbppjr2JKjnEgXYUT7TfdML7Pv/bb1jjJ50Ooti7jmI313dRiPMLuunT6gSIU/tNBxDJDZygH5EH6rdF3BfFs4cgqbwNiZ7Md3h0zEr63BvTH1xdTl6HkC4=,iv:JQY7RSel9/UmaqodbGiWcIaLMXS9nw1nZRfbLkYZNrY=,tag:tyh3lobSOaKSNdeP8FKtaQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
