--- a/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets-user.sops.yaml
@@ -4,7 +4,7 @@ metadata:
     name: cluster-secrets-user
     namespace: flux-system
 stringData:
-    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:4VoHt9iwKEescDY/,iv:pq2UaRH7L4UFhKpbM86mMiFYZgGAC9Xgvs0C245mwzk=,tag:E7PYg5eIplQuYEA92MDwhA==,type:str]
+    SECRET_PLACEHOLDER: ENC[AES256_GCM,data:JFseYbphIi0fEhnj,iv:rTvVOjdPWyMWjo9jo4cJyFWPp9aCn8PN7WaPlWgwvL0=,tag:T5Z+uMOAyHqld+JV2CgQEQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -14,14 +14,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5Z240bGYwbGE4LzJjMDFO
-            Y2VTakl3TEZtbkgwZk83MThWMWhZM2IvUVhjCjlaZVRvR3JSdUJhZlIzNTd1eUg3
-            bTRoT2lTRFBNYW1UZWhLaVQzS0I0Y1EKLS0tIGRZMVlQNVZ1WmtDSHZVMEtEaEtZ
-            UFUrVFRidEZCV0J1WWZjZ3U2ZzVvWjAKuc8Q9ikdEvsKRH32UNN5FG/8wixjfot8
-            gx5cSyKI80dZd32sdrSsGksuZcoz7VGO+SJQN4mXNd+8e256b275rg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBoK3JKOHVLSkdlRVdxZ2JO
+            MnZtcWxKcVVhdk9vbUFnRmgxWWhTZ3p1Vlh3CjhUeE5QcHljZngxdjZLc3VuMVBY
+            Y1JHWGhqbjZ2ZVg4TSsyR0NBZEZSencKLS0tIGNKM2MvRlVBZ29WT1dmMEhuZE5y
+            blVVNHRPY0VFMWlyZzcyb2tVcUJWRkEKbMJt2pS4vrniVr92MxzaoI+sEYAB5lj/
+            TgJJ2EECNUuPDwXNMzmISaS/S8Pb19Kl/eJQxD3seKMK/AQAs4Ta4A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-10T00:58:45Z"
-    mac: ENC[AES256_GCM,data:Jvtb17qNatTk9grNZVrUOm6Eoy53VRYiQRZVjNsLkuv3R7lSqN+QsppHLJd8vEZilDCFjj+TxWPqJfqqkWE3APV8d3rYxKfIC7A9qZ939qXlyEmKmLevPWqmwQFmntH6/L4kQQtjGz1ZxGairokhROczq8hrU58HasifiaBOlt8=,iv:9pEEFXy9d1jCbOMG/hXxfDknTPC2QPFtmLlSBHF0eIE=,tag:aBGeWiNRi7dlFEuGUwUw3A==,type:str]
+    lastmodified: "2023-10-10T01:14:28Z"
+    mac: ENC[AES256_GCM,data:ssT+aHJbCkRz7hwBAjC84aUyyBzAugZMRfzXQRAmRaPKKSXeeJLk9uItzjk9AaltSo9vlpwOpGMVcU7ahFq0ST0G2Hw+sie+0fh4t/3vOtPgTgc89eTq5YpHvDuX/BLKVYEgyb27v5XbyRdB1ukny4N6dmeBukbIgBvMIhXZ9/s=,iv:UBFxL+ZDGmunOsJFk1tctlVUuto9BmtnuUBpvRHpP4o=,tag:mbFBMfwRrUxrJYZIIkwlvQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
