--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:pJUUoBTsDOzXSDT5FmyeQw==,iv:ALVgAWnD79Yuh1FYPf+cGvsuFI6GDxwAZgS2wOREjL0=,tag:LYg+pfoUAJ3ldmcLKFg8Dg==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:q4ZNtw0U54139U+HtPvpcTSStWFERzoxHQLZ5WZ5Qq42zZyT,iv:OzPaR8VNiLG5QpVbncDJTP8GJ462fvuGe9dPA1ANOEc=,tag:ukvIUfoKKHYY4RcVeHjFqw==,type:str]
-    SECRET_DOMAIN: ENC[AES256_GCM,data:kfrY6v4WVlIQ5KQ=,iv:wpvjm4m6iFUZI3L/QgO2gCVdM0H9M6tl5FRlXyYeczI=,tag:c/YrOuDbITwveOVQT38aWg==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:tG7MrGoZvR+mtSl+sCZXEQ==,iv:HhIW7Juo3RDqkcFza/MkuJzxCfB8/p5h/slmFvQ/ji0=,tag:wbBL93GPT5xOsGu34VwzLw==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:UDfkMxV3rS8StBcvjFLB3X2SwY/qoa5U/gJcEfmSum9yfdpA,iv:KMqOSXT6CrJUoSNXvhPDGxMHuh4H820Ad3bT9q17uBc=,tag:Q2UovalwjZyJK3z73bOPhQ==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:xGkDatz99YhBUT4=,iv:/uGoum9EccBaFjZcxDL7D2CVWLBsL3vP+c2rQs4zK10=,tag:z8vk5ERGgsph9Uhux9UXiw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDL1VXelh6akFoVlpEZGhh
-            QUh2RktWMnZ5OGZjMitmamZqaC9BZUpiQWhrCkhUUVBaMHRRSWJnRGwvMXpaOEIy
-            TlJFUGxJQzFXTE5wanpRVzVqaWt0OVUKLS0tIEtDUXA3V2FnRHdadGUvb0VSTFlr
-            dUFVV3AvemcwSzdwV3A2cGxZTDl4WTAKw/rvMaryjH6U4CFVfRtCo/C+0YV8KP5e
-            vwiSsj57Y6vRwz9Hla2BirRULIRa+Cs7s8M600QNFeqhUsvUhUsyMg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4dy92TDk3MUlYQUN0RFNS
+            RldJOUpacmVma0VCcVNSaUIzKzVwcWtCMVQ0CnpWZmNGeWVxSVVSeVBPQm1wWmt5
+            NW84a0NkZDBuazVoOTFzalFiQlFvTkkKLS0tIEthazhKZVFFZXNNY2w1ZFdQRW1X
+            Q0VWVVFXRDNKV2Q5RHBHblpja1kxU00K2s6Z0On3DoJ5fyIzDA33kgEcTYIO1SCL
+            7fS7x3AOaf9/OuQA8ek4YFtWH2o2WJbJ89yXFSSik35VOyeOSxyeew==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-10T00:58:44Z"
-    mac: ENC[AES256_GCM,data:ypuPQEiWwMty6fi6OcPMrpsEJy6wxBG3bX+oOrXBbpVvivpZ4pqwSw6UvEJtweEPrchpTrEQF4NWgyME7FztopxAYxvFc7r0G/Nnv1VM4upkrGwv9MKIiFUSL3quybqE5TLEVi1FaP2LrcG35Bu3Oii0umRnjZgy853ydkT1EPU=,iv:Bba+U1IaGvqHE1DrS+BhmWsSOeZPP2HuSP1ogPsU+0g=,tag:h3K7WoN2I5CFRP0wm05CgA==,type:str]
+    lastmodified: "2023-10-10T01:14:27Z"
+    mac: ENC[AES256_GCM,data:qcsPgnceR3ez39O+QdjDWggXBDVCluVlq2LnPI1FC+ecUmwjxXKYuE5LuE3Wu1gvAX+m2KOTr+ytN6yPdwIi9hAr8PDSNyaKepBCeguC0TJE0z2wdbx563Xgh8Ig2ULsEWU/1vcJjrqWtKGO4wiER/83VugBwDxKsUaLWJQf5Qs=,iv:SxF741+Ol1nyyS4YhrBFin0G5m+q4RQVfqpkJS4puAo=,tag:W7c5SxuJ0eqj/BSuwU5aSg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
