--- a/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
+++ b/kubernetes/apps/flux-system/weave-gitops/app/secret.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-user-auth
     namespace: flux-system
 stringData:
-    password: ENC[AES256_GCM,data:1YqQnojmdtJiTTnWsjq6ThA+q4N8WujVnesWLABGy0u6qo6MhjdayhLfxsktwsAMca2KeoQocO/Yt0RV,iv:Hp2B5fqnda2BxfzEd0PwMsHojVlFeBsBvGKaGZSj4fY=,tag:St+DWqfu+hL0qTBhOgaDtQ==,type:str]
-    username: ENC[AES256_GCM,data:SC1ni9M=,iv:HUEY7/QsMw0MjganC+r9206ZB9Z03SbNE6Gr2uoKbm0=,tag:EHHBrfPc3JmDUvrTQWiT4Q==,type:str]
+    password: ENC[AES256_GCM,data:qRjQMkZeY6qhxSe5NakV4CPxuE704J86cpyj1AUJkBwkYZz+0Y6EHMb9r0oAZ0I2gPn6rBQW6fzYAaBw,iv:3YF286abkVIWplCj7HJw31CeMB9wyeERrRSx/O8sSck=,tag:9Z85RgzLJWi0ZdRPpUjtmg==,type:str]
+    username: ENC[AES256_GCM,data:TPAc1jU=,iv:MnDPsD3uGg364XL6ytHNehRSoqFuXFyVX9AUOs3uqh0=,tag:Oudp9WCmT/eGy18VWExIDw==,type:str]
 type: Opaque
 sops:
     kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age16vhmz79lvv4q7nes99c2mr2l5cmrq34qlnyws3dkfnhfa7jhapssqm2jkd
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB6NGJPeEE3NlFpeHBuY1JN
-            RjVTWnM4WEd1eGhIK0x0NmdDZHhBR0dvT2dFCmw3WTlsR0UwKzlxUCsyMmFKSm15
-            em9NQ2RnaHFTU1hkM0Rwa2xVTVZTQ1EKLS0tIHBGMnROamdrSExXRHIrM3FPNlVK
-            aG43Z3pUc0hhMWp0U1dWTXM0SUhLZkEKxR6pcFI1j/UCsDgPHy+LjFxpRVySMydE
-            hUzdPkjOLr2fAqgr4K0rNunAU232HCEaBLlSZb8XDYNgcHmNFTMDkA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxNjZTS3JEcmxiWHZtekEw
+            bkpJUW9HcDU0ZGFud2UzOHpzVXdwU1ZZbDM4ClJoOXlrT1Bsb1dlVVZlN0k1dDFz
+            cExaL0FPaVJsZ2dTVU9nQ0lRaktnUlkKLS0tIERtelBZc3Ryck1aMGR5eFFVNEU3
+            dmNXb1E0S2ZWNjNPbkZnVmlDMjM3d2sKiq1tX+As2NUM6a3hiPzCfq6TLfVaTr81
+            xLxl0LLRfZO8hr8axcEW7FqwZ/bBzZRoHjjb5o3Ath3ufjUxJblt6A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-10-10T00:59:04Z"
-    mac: ENC[AES256_GCM,data:v3QXI7yySQN7zjykXtQeB+UYqBON5fljY8hWvMg93oFisRuUo/mGyMO36qW/YVesByqLZcowBaNTh0DsqDD8Hcb+n+LdIg6ZhKlANctXxYvJEtupzxYTsswJsrBhSlceeFCnea1tl4JQ/oePklZ3QCzuRt3Z80MPHm3XNS/BGqM=,iv:psxfXECErW1+gzqF28U5XqKjmHLKf3nntgRCmwBBlR0=,tag:OYWHeHBOVXYVfXe8Z3qSVw==,type:str]
+    lastmodified: "2023-10-10T01:14:48Z"
+    mac: ENC[AES256_GCM,data:t+4Dlj0IGdoUb9GHPnsLDs3XxljWxmKkW+M/A46fgh0xlMLc10GjSEZAF8MXDMZuCXGsmpsjaxCJ8Q6NvfZgN4BblMtCZetDAw6ivm2hI2odilFwP6Xa1L3mjIhdUHTjHXO3XK6DKI/mmPRwVMxKix/o9AgnKzEWNPKbz5GmXc8=,iv:v5NW3wZ9818j8ovDKVITDtWL6zxOtLpjSXb7U5lv+50=,tag:Z55zDvxED/UfTPNTqVwX+g==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.0
